# Energy-Consumption

./: .gitignore  pyproject.toml  utils.py
airflow/: docker-compose.yaml
airflow/dags/: ml_pipeline_dag.py
feature_pipeline/: pipeline.py  settings.py  utils.py
feature_pipeline/etl/: __init__.py  validation.py
training_pipeline/: transformers.py
