[tool.poetry]
name = "energy-consumption"
version = "0.1.0"
description = ""
authors = ["Nirmal <n1rm4l13@gmail.com>"]
readme = "README.md"
packages = [{include = "energy-consumption"}]

[tool.poetry.dependencies]
python = "~3.11"
hopsworks = "3.4.3"
fire = "^0.5.0"
yarl = "^1.8.2"
pandas = ">=1.3.5"
requests = "^2.28.2"
python-dotenv = ">=0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
